--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@
   width: 100%;
   position: absolute;
 }
+
+.Body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+}
