--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .NavBar{
     display: flex;
     flex-direction: row-reverse;
-    padding: 0em 0 0 1em;
+    padding: 0 1em 0 0;
     height: 10%;
 }
 
