--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 6em;
 }
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
 h1 {
@@ -9,4 +10,7 @@ h1 {
     text-align: center;
     font-size: 4em;
     font-family: 'Nunito', sans-serif;
+}
+.Body .Home img {
+    padding: 1em 2em 1em 2em;
 }
