--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@ button{
     background-color: transparent;
     border-color: transparent;
     color: #FFFFFF;
-    outline:none;
+    outline:none !important;
 }
 
 .active{
