Implement boostrap to catalog

--- a/src/components/ElementCatalog/ElementCatalog.css
+++ b/src/components/ElementCatalog/ElementCatalog.css
@@ -3,12 +3,8 @@
     padding: .2em
 }
 
-.ElementCatalog img {
-    height: 210px;
-    width: 100%;
+.ElementCatalog figcaption{
+    color: #FFFFFF;
+    font-weight: 700;
 }
 
-.ElementCatalog h4 {
-    height: 20%;
-    text-align: end;
-}
