--- a/src/components/MoviesCatalog/MovieList.css
+++ b/src/components/MoviesCatalog/MovieList.css
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: row;
 }
+.MovieList .LoaderContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
