--- a/src/views/Element/Element.css
+++ b/src/views/Element/Element.css
@@ -7,26 +7,29 @@
 }
 
 .Element label {
+    margin-top: .5em;
     font-weight: 600;
 }
+
 .Element .CoverContainer {
     position: relative;
-    max-width: 500px;
+    max-width: 100%;
     width: 100%;
     min-width: 300px;
     height: 100%;
-    max-height: 400px;
-    min-height: 300px;
+    max-height: 500px;
+    min-height: 50px;
 }
 
 .Element img {
     align-self: center;
-    max-width: 500px;
+    /* max-width: 90vh; */
     width: 100%;
     min-width: 300px;
     height: 100%;
-    max-height: 400px;
-    min-height: 300px;
+    max-height: 50vh;
+    min-height: 50px;
+    object-fit: cover;
 }
 
 .Element h2, h3 {
@@ -41,7 +44,10 @@
 .Info{
    display: flex;
    flex-direction: row;
-   align-items: center;
+   align-items: baseline;
+}
+.Info .labelInfo{
+    font-size: medium;
 }
 
 .Info p{
