--- a/src/views/Element/Element.css
+++ b/src/views/Element/Element.css
@@ -1,9 +1,12 @@
 .Element {
+    height: 100%;
+    width: 100;
     display: flex;
     flex-direction: column;
     color: #FFFFFF;
     padding: 0 1em 0 1em;
     align-items: center;
+    overflow: auto;
 }
 
 .Element label {
