--- a/src/views/Element/Element.css
+++ b/src/views/Element/Element.css
@@ -1,3 +1,9 @@
+.ElementContainer{
+    height: 100%;
+    width: 100;
+    overflow:scroll;
+    overflow-x:hidden;
+}
 .Element {
     height: 100%;
     width: 100;
@@ -6,7 +12,6 @@
     color: #FFFFFF;
     padding: 0 1em 0 1em;
     align-items: center;
-    overflow: auto;
 }
 
 .Element label {
@@ -21,7 +26,7 @@
     min-width: 300px;
     height: 100%;
     max-height: 500px;
-    min-height: 50px;
+    min-height: 250px;
 }
 
 .Element img {
@@ -31,7 +36,7 @@
     min-width: 300px;
     height: 100%;
     max-height: 50vh;
-    min-height: 50px;
+    min-height: 250px;
     object-fit: cover;
 }
 
