--- a/src/views/Element/Element.css
+++ b/src/views/Element/Element.css
@@ -25,7 +25,7 @@
     width: 100%;
     min-width: 300px;
     height: 100%;
-    max-height: 500px;
+    max-height: 50vh;
     min-height: 250px;
 }
 
